接入文章接口

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.main.banner-mode=off
-server.port=8080
+server.port=9090
+server.context-path=/api
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 spring.jackson.time-zone=GMT+8
@@ -14,7 +15,7 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 # crm datasource
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/blog?useSSL=false&useUnicode=true&amp;characterEncoding=UTF-8
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/blog?useSSL=false&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
