--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "twemoji": "^2.5.0",
     "vue": "^2.4.2",
     "vue-infinite-loading": "^2.2.1",
