--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,19 +8,12 @@ spring.jackson.property-naming-strategy=SNAKE_CASE
 # mapper
 mapper.mappers=cn.derker.blog.dao.base.BaseMapper
 mapper.not-empty=false
-mapper.identity=MYSQL
+mapper.before=false
+mapper.identity=select last_insert_rowid()
 # page helper
-pagehelper.helperDialect=mysql
+pagehelper.helperDialect=sqlite
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
-# crm datasource
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/blog?useSSL=false&useUnicode=true&characterEncoding=UTF-8
-spring.datasource.druid.username=root
-spring.datasource.druid.password=root
-spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.initial-size=3
-spring.datasource.druid.min-idle=3
-spring.datasource.druid.max-active=20
-spring.datasource.druid.test-on-borrow=true
-spring.datasource.druid.stat-view-servlet.allow=true
+# datasource
+spring.datasource.url=jdbc:sqlite:data/blog.db
