--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # Editor directories and files
-.idea
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
+
+target/
+*.iml
+.mvn/
