--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "element-ui": "^2.0.10",
     "mavon-editor": "^2.4.15",
-    "spectre.css": "^0.4.7",
     "twemoji": "^2.5.0",
     "vue": "^2.4.2",
     "vue-infinite-loading": "^2.2.1",
