--- a/blog-server/pom.xml
+++ b/blog-server/pom.xml
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>RELEASE</version>
+            <version>1.1.7</version>
         </dependency>
         <!--page helper-->
         <dependency>
