--- a/blog-server/pom.xml
+++ b/blog-server/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.derker</groupId>
-    <artifactId>blog</artifactId>
+    <artifactId>blog-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
