--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "cross-env NODE_ENV=dev nodemon index.js",
+    "run": "cross-env NODE_ENV=prod nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,8 @@
     "waterline": "^0.15.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.15",
+    "pm2": "^5.1.2"
   }
 }
