--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=dev nodemon index.js",
-    "start": "cross-env NODE_ENV=prod pm2 start index.js --name blog",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "cross-env NODE_ENV=production pm2 start index.js --name blog",
     "stop": "pm2 stop blog"
   },
   "repository": {
@@ -20,7 +20,6 @@
   "homepage": "https://github.com/dongkuo/blog#readme",
   "dependencies": {
     "@koa/router": "^10.1.1",
-    "better-sqlite3": "^7.5.0",
     "config": "^3.3.7",
     "ejs": "^3.1.6",
     "koa": "^2.13.4",
@@ -29,7 +28,9 @@
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
     "koa-views": "^8.0.0",
+    "log4js": "^6.4.1",
     "moment": "^2.29.1",
+    "mysql2": "^2.3.3",
     "underscore": "^1.13.2",
     "waterline": "^0.15.0"
   },
