--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "underscore": "^1.13.2",
+    "useragent": "^2.3.0",
     "waterline": "^0.15.0"
   },
   "devDependencies": {
