--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "start": "cross-env NODE_ENV=production pm2 start index.js --name blog",
+    "restart": "pm2 restart blog",
     "stop": "pm2 stop blog"
   },
   "repository": {
